--- a/config/database.yml
+++ b/config/database.yml
@@ -8,3 +8,13 @@ development:
   password: royalabadi
   host: 192.168.100.6
   port: 1433
+production:
+  adapter: sqlserver
+  encoding: utf8
+  reconnect: false
+  database: DBRoyal
+  pool: 5
+  username: ubuntu_admin
+  password: royalabadi
+  host: 192.168.100.6
+  port: 1433
