--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ production:
   adapter: sqlserver
   encoding: utf8
   reconnect: false
-  database: DBRoyal
+  database: DBMarketing
   pool: 5
   username: ubuntu_admin
   password: royalabadi
